--- a/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
@@ -28,7 +28,7 @@
                             <label for="tripType">Trip Type</label>
                             <select class="form-control" id="tripType" [(ngModel)]="searchParams.tripType">
                                 <option value="NONE">---</option>
-                                <option value="BUSINESS_TRIP">BUSINESS TRIP</option>
+                                <option value="BUSINESS TRIP">BUSINESS TRIP</option>
                                 <option value="TRAINING">TRAINING</option>
                                 <option value="CONFERENCE">CONFERENCE</option>
                             </select>
