- visualization with Google Charts

--- a/nicnbk-ui-angular2/public/css/common.css
+++ b/nicnbk-ui-angular2/public/css/common.css
@@ -68,3 +68,7 @@ label {
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
 }
+
+.googleChartTable {
+    font-size: 7pt;
+}
