--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-liquid-portfolio.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-liquid-portfolio.component.html
@@ -1,17 +1,75 @@
 <div class="container">
-    <h4><small>login: user pass: Qwerty123</small></h4>
+    <!--<h4><small>login: user pass: Qwerty123</small></h4>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>-->
+                <!--<object class='tableauViz' width='100%' height='1936' style='display:none;'>-->
+                    <!--<param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />-->
+                    <!--<param name='site_root' value='' />-->
+                    <!--<param name='name' value='NIC_LQ&#47;lq_portfolio' />-->
+                    <!--<param name='tabs' value='no' />-->
+                    <!--<param name='toolbar' value='no' />-->
+                    <!--<param name='showShareOptions' value='false' />-->
+                <!--</object>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <div class="row">
+        <div class="col-md-2">
+            <select (ngModelChange)="redraw()" id="tableDate" class="form-control">
+                <option *ngFor="let item of getAllDates()" [value]="item">{{item}}</option>
+            </select>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
-            <div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>
-                <object class='tableauViz' width='100%' height='1936' style='display:none;'>
-                    <param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />
-                    <param name='site_root' value='' />
-                    <param name='name' value='NIC_LQ&#47;lq_portfolio' />
-                    <param name='tabs' value='no' />
-                    <param name='toolbar' value='no' />
-                    <param name='showShareOptions' value='false' />
-                </object>
+            <div class="col-md-6">
+                <h4>NET Asset Value, $</h4>
+                <div id="net_value">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Performance, %</h4>
+                <div id="performance">
+                </div>
             </div>
         </div>
     </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="cum_returns_ytd">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="cum_returns_inception">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div id="portfolio_structure">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="bonds_by_country">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="bonds_by_sector">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="position_table">
+            </div>
+        </div>
+    </div>
+    <br/>
 </div>
