--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
@@ -1,16 +1,29 @@
 <div class="container">
-    <h4><small>login: user pass: Qwerty123</small></h4>
+    <!--<h4><small>login: user pass: Qwerty123</small></h4>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>-->
+                <!--<object class='tableauViz' width='100%' height='1936' style='display:none;'>-->
+                    <!--<param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />-->
+                    <!--<param name='site_root' value='' />-->
+                    <!--<param name='name' value='MacroMonitor&#47;MacroMonitor' />-->
+                    <!--<param name='tabs' value='no' />-->
+                    <!--<param name='toolbar' value='no' />-->
+                    <!--<param name='showShareOptions' value='false' />-->
+                <!--</object>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
     <div class="row">
         <div class="col-md-12">
-            <div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>
-                <object class='tableauViz' width='100%' height='1936' style='display:none;'>
-                    <param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />
-                    <param name='site_root' value='' />
-                    <param name='name' value='MacroMonitor&#47;MacroMonitor' />
-                    <param name='tabs' value='no' />
-                    <param name='toolbar' value='no' />
-                    <param name='showShareOptions' value='false' />
-                </object>
+            <div id="table">
+            </div>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="line_chart">
             </div>
         </div>
     </div>
