--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component.html
@@ -1,16 +1,71 @@
 <div class="container">
-    <h4><small>login: user pass: Qwerty123</small></h4>
+    <!--<h4><small>login: user pass: Qwerty123</small></h4>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>-->
+                <!--<object class='tableauViz' width='100%' height='1936' style='display:none;'>-->
+                    <!--<param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />-->
+                    <!--<param name='site_root' value='' />-->
+                    <!--<param name='name' value='NIC_PORTFOLIO&#47;NICPortfolio' />-->
+                    <!--<param name='tabs' value='no' />-->
+                    <!--<param name='toolbar' value='no' />-->
+                    <!--<param name='showShareOptions' value='false' />-->
+                <!--</object>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <div class="row">
+        <div class="col-md-2">
+            <select (ngModelChange)="redrawTables()" [(ngModel)]="tableDate" id="tableDate" class="form-control" >
+                <option *ngFor="let item of getAllDates()" [value]="item">{{item}}</option>
+            </select>
+        </div>
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <h4>Performance NET Asset Value</h4>
+                <div id="portfolio_value">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h4>Portfolio Performance</h4>
+                <div id="portfolio_performance">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h4>Benchmarks Performance</h4>
+                <div id="benchmarks_performance">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-2">
+            <select (ngModelChange)="redrawLineChart()" [(ngModel)]="performanceType" id="performanceType" class="form-control">
+                <option *ngFor="let item of getAssetTypes()" [value]="item">{{item}}</option>
+            </select>
+        </div>
+        <div class="col-md-12">
+            <div id="alternative_performance">
+            </div>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-6">
+            <div id="target_allocation">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div id="actual_allocation">
+            </div>
+        </div>
+    </div>
+    <br/>
     <div class="row">
         <div class="col-md-12">
-            <div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>
-                <object class='tableauViz' width='100%' height='1936' style='display:none;'>
-                    <param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />
-                    <param name='site_root' value='' />
-                    <param name='name' value='NIC_PORTFOLIO&#47;NICPortfolio' />
-                    <param name='tabs' value='no' />
-                    <param name='toolbar' value='no' />
-                    <param name='showShareOptions' value='false' />
-                </object>
+            <div id="public_performance">
             </div>
         </div>
     </div>
