--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-private-equity.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-private-equity.component.html
@@ -1,16 +1,73 @@
 <div class="container">
-    <h4><small>login: user pass: Qwerty123</small></h4>
+    <!--<h4><small>login: user pass: Qwerty123</small></h4>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>-->
+                <!--<object class='tableauViz' width='100%' height='1936' style='display:none;'>-->
+                    <!--<param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />-->
+                    <!--<param name='site_root' value='' />-->
+                    <!--<param name='name' value='NIC_PE&#47;PEPortfolio' />-->
+                    <!--<param name='tabs' value='no' />-->
+                    <!--<param name='toolbar' value='no' />-->
+                    <!--<param name='showShareOptions' value='false' />-->
+                <!--</object>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <div class="row">
+        <div class="col-md-2">
+            <select (ngModelChange)="redraw()" [(ngModel)]="tableDate" id="tableDate" class="form-control">
+                <option *ngFor="let item of getAllDates()" [value]="item">{{item}}</option>
+            </select>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
-            <div class='tableauPlaceholder' style='width: 100%; height: 1936px;'>
-                <object class='tableauViz' width='100%' height='1936' style='display:none;'>
-                    <param name='host_url' value='http%3A%2F%2F192.168.111.36%2F' />
-                    <param name='site_root' value='' />
-                    <param name='name' value='NIC_PE&#47;PEPortfolio' />
-                    <param name='tabs' value='no' />
-                    <param name='toolbar' value='no' />
-                    <param name='showShareOptions' value='false' />
-                </object>
+            <div class="col-md-6">
+                <div id="net_value">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div id="irr">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Tranche A - 225 000 000 USD</h4>
+            <div id="holdings_a">
+            </div>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Tranche B - 375 000 000 USD</h4>
+            <div id="holdings_b">
+            </div>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <h4>Exposure by Sector</h4>
+                <div id="market_exposure_by_sector">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Exposure by Geography</h4>
+                <div id="market_exposure_by_geography">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br/>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Cash Flows</h4>
+            <div id="cash_flow">
             </div>
         </div>
     </div>
