- fund profile , fix new fund/manager links

--- a/nicnbk-ui-angular2/src/app/riskmanagement/view/riskmanagement-axioma-reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/riskmanagement/view/riskmanagement-axioma-reporting.component.html
@@ -17,7 +17,7 @@
 
     <ul class="nav nav-tabs">
         <li class="active">
-            <a data-toggle="tab" href="#liquidity">LIQUIDITY</a>
+            <a data-toggle="tab" href="#liquidity">LIQUID</a>
         </li>
         <li>
             <a data-toggle="tab" href="#singularity">SINGULARITY</a>
