--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -99,24 +99,24 @@
                         </ul>
                     </li>
                     <li [routerLinkActive]="['active']" ><a href="#">Real Estate</a></li>
-                    <li [routerLinkActive]="['active']" ><a href="#">Hedge Funds</a></li>
-                    <!--<li class="dropdown">-->
-                        <!--&lt;!&ndash;<a th:href="@{/pe}">Private Equity</a>&ndash;&gt;-->
-                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">-->
-                            <!--Hedge Funds <span class="bootstrapCaret"></span>-->
-                        <!--</a>-->
-                        <!--<ul class="dropdown-menu">-->
-                            <!--<li><a [routerLink]="['/hf/dashboard']" >Dashboard</a></li>-->
-                            <!--<li><a [routerLink]="['/hf/fundSearch']">Fund Search</a></li>-->
-                            <!--<li><a [routerLink]="['/hf/fundSelection']">Fund Selection </a></li>-->
-                            <!--<li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>-->
-                            <!--<li><a [routerLink]="['/hf/report']">Report </a></li>-->
-                            <!--<li role="separator" class="divider"></li>-->
-                            <!--<li><a [routerLink]="['/hf/fundProfile']">New Fund </a></li>-->
-                            <!--<li><a [routerLink]="['/hf/managerProfile']">New Manager </a></li>-->
+                    <!--<li [routerLinkActive]="['active']" ><a href="#">Hedge Funds</a></li>-->
+                    <li class="dropdown">
+                        <!--<a th:href="@{/pe}">Private Equity</a>-->
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Hedge Funds <span class="bootstrapCaret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a [routerLink]="['/hf/dashboard']" >Dashboard</a></li>
+                            <li><a [routerLink]="['/hf/fundSearch']">Fund Search</a></li>
+                            <li><a [routerLink]="['/hf/fundSelection']">Fund Selection </a></li>
+                            <li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>
+                            <li><a [routerLink]="['/hf/report']">Report </a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a [routerLink]="['/hf/fundProfile/0']">New Fund </a></li>
+                            <li><a [routerLink]="['/hf/managerProfile/0']">New Manager </a></li>
 
-                        <!--</ul>-->
-                    <!--</li>-->
+                        </ul>
+                    </li>
                     <li [routerLinkActive]="['active']"><a [routerLink]="['/bt']" data-toggle="tooltip" title="Business Trip Memo">Business Trips</a></li>
                 </ul>
             </div>
