--- a/nicnbk-ui-angular2/src/app/hf/view/hf.dashboard.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.dashboard.component.html
@@ -1,3 +1,26 @@
-<div class="container" style="min-height: 200px;">
-    HF Dashboard
+<!--<div class="" style="min-height: 200px;">-->
+ <div>
+    <img src="background.png" id="planets" alt="Web Logos" usemap="#logos2"/>
+    <map name="logos2">
+        <area shape="circle" coords="{{x1}}, {{y1}}, {{r1}}"  [routerLink]="['/m2s2/list/']"  title="M2S2" alt="M2S2" />
+        <area shape="circle" coords="{{x2}},{{y2}}, {{r2}}"  [routerLink]="['/news/list/']"  title="NEWS" alt="NEWS" />
+        <!--<area shape="default" nohref="nohref" title="Default" alt="Default"/>-->
+    </map>
 </div>
+<!--<div>-->
+     <!--<img src="weblogo.jpg" alt="Web Logos" usemap="#logos" />-->
+     <!--<map name="logos">-->
+         <!--<area shape="circle" coords="68,56,33" href="http://www.stumbleupon.com/" title="StumbleUpon" alt="StumbleUpon" />-->
+         <!--<area shape="rect" coords="220,19,306,54" href="http://www.youtube.com/" title="Youtube" alt="Youtube" />-->
+         <!--<area shape="rect" coords="367,32,516,84" href="http://www.google.com/" title="Google" alt="Google" />-->
+         <!--<area shape="rect" coords="556,12,639,115" href="http://www.wikipedia.com/" title="Wikipedia" alt="Wikipedia" />-->
+         <!--<area shape="rect" coords="128,62,244,114" href="http://www.skype.com/" title="Skype" alt="Skype" />-->
+         <!--<area shape="rect" coords="301,103,444,136" href="http://www.yahoo.com/" title="Yahoo" alt="Yahoo" />-->
+         <!--<area shape="rect" coords="25,158,135,207" href="http://www.ebay.com/" title="eBay" alt="eBay" />-->
+         <!--<area shape="rect" coords="180,147,271,175" href="http://www.flickr.com/" title="Flickr" alt="Flickr" />-->
+         <!--<area shape="rect" coords="299,166,379,208" href="http://www.digg.com/" title="Digg" alt="Digg" />-->
+         <!--<area shape="circle" coords="500,184,32" href="http://wordpress.org/" title="Wordpress.org" alt="Wordpress.org" />-->
+         <!--<area shape="rect" coords="599,142,667,209" href="http://www.blogger.com/" title="Blogger" alt="Blogger" />-->
+         <!--<area shape="default" nohref="nohref" title="Default" alt="Default"/>-->
+     <!--</map>-->
+<!--</div>-->
