--- a/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
@@ -1,4 +1,18 @@
 <div class="container">
+
+    <div class="row top-buffer" >
+        <div class="col-md-12">
+            <div class="alert alert-info" *ngIf="successMessage != null"><span>{{successMessage}}</span>
+            </div>
+        </div>
+    </div>
+    <div class="row top-buffer" >
+        <div class="col-md-12">
+            <div class="alert alert-danger" *ngIf="errorMessage != null"><span>{{errorMessage}}</span>
+            </div>
+        </div>
+    </div>
+
     <ul class="nav nav-tabs">
         <li class="active">
             <a data-toggle="tab" href="#overview">OVERVIEW</a>
@@ -12,7 +26,8 @@
         <div id="overview" class="tab-pane fade in active">
             <div class="row">
                 <div class="col-md-9">
-                    <input type="text" class="form-control" value="Grosvenor Capital Management"/>
+                    <input type="text" class="form-control" placeholder="Enter name..."
+                           [(ngModel)]="manager.name"/>
                 </div>
             </div>
             <br/>
@@ -22,76 +37,63 @@
                     <tr>
                         <td class="col-md-1">Manager Type</td>
                         <td class="col-md-3">
-                            <select style="width: 100%">
+                            <select style="width: 100%" [(ngModel)]="manager.managerType">
                                 <option value="0">---</option>
-                                <option value="0">Fund of funds</option>
-                                <option value="0">Hedge Fund</option>
+                                <option *ngFor="let item of managerTypeLookup" [value]="item.code">{{item.nameEn}}</option>
                             </select>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Strategy</td>
                         <td class="col-md-3">
-                            <select style="width: 100%">
+                            <select style="width: 100%" [(ngModel)]="manager.strategy">
                                 <option value="0">---</option>
-                                <option value="0">option 1</option>
-                                <option value="0">option 2</option>
-                                <option value="0">option 3</option>
+                                <option *ngFor="let item of strategyLookup" [value]="item.code">{{item.nameEn}}</option>
                             </select>
                         </td>
                     </tr>
-                    <tr>
-                        <td class="col-md-1">Manager Type</td>
-                        <td class="col-md-3">
-                            <select style="width: 100%">
-                            <option value="0">---</option>
-                            <option value="0">option 1</option>
-                            <option value="0">option 2</option>
-                            <option value="0">option 3</option>
-                        </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-1">Status</td>
-                        <td class="col-md-3">
-                            <select style="width: 100%">
-                                <option value="0">---</option>
-                                <option value="0">option 1</option>
-                                <option value="0">option 2</option>
-                                <option value="0">option 3</option>
-                            </select>
-                        </td>
-                    </tr>
+                    <!--<tr>-->
+                        <!--<td class="col-md-1">Status</td>-->
+                        <!--<td class="col-md-3">-->
+                            <!--<select style="width: 100%" [(ngModel)]="manager.status">-->
+                                <!--<option value="0">-&#45;&#45;</option>-->
+                                <!--<option *ngFor="let item of statusLookup" [value]="item.code">{{item.nameEn}}</option>-->
+                            <!--</select>-->
+                        <!--</td>-->
+                    <!--</tr>-->
                     <tr>
                         <td class="col-md-1">Inception</td>
-                        <td class="col-md-3">2012
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-1">Legal Structure</td>
                         <td class="col-md-3">
-                            <select style="width: 100%">
-                                <option value="0">---</option>
-                                <option value="0">option 1</option>
-                                <option value="0">option 2</option>
-                                <option value="0">option 3</option>
-                            </select>
+                            <input type="text" [(ngModel)]="manager.inception"/>
                         </td>
                     </tr>
+                    <!--<tr>-->
+                        <!--<td class="col-md-1">Legal Structure</td>-->
+                        <!--<td class="col-md-3">-->
+                            <!--<select style="width: 100%" [(ngModel)]="manager.legalStructure">-->
+                                <!--<option value="0">-&#45;&#45;</option>-->
+                                <!--<option *ngFor="let item of legalStructureLookup" [value]="item.code">{{item.nameEn}}</option>-->
+                            <!--</select>-->
+                        <!--</td>-->
+                    <!--</tr>-->
                     <tr>
                         <td class="col-md-1">Domicile Country</td>
                         <td class="col-md-3">
-                            <select style="width: 100%">
+                            <select style="width: 100%" [(ngModel)]="manager.domicileCountry">
                                 <option value="0">---</option>
-                                <option value="0">option 1</option>
-                                <option value="0">option 2</option>
-                                <option value="0">option 3</option>
+                                <option *ngFor="let item of domicileCountryLookup" [value]="item.code">{{item.nameEn}}</option>
                             </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-1">AUM </td>
+                        <td class="col-md-3">
+                            <input type="text" [(ngModel)]="manager.aum"/>
                         </td>
                     </tr>
                 </table>
                 <div class=" col-md-1">&nbsp;</div>
-                <table class=" col-md-4 table-striped table-condensed">
+                <table class=" col-md-6 table-striped table-condensed">
                 <!--<h4>Contacts</h4>-->
                     <!--<tr>-->
                     <!--<td class="col-md-1">Manager Name</td>-->
@@ -99,41 +101,51 @@
                     <!--</tr>-->
                     <tr>
                         <td class="col-md-1">Fund Managers</td>
-                        <td class="col-md-3">
+                        <td class="col-md-5">
+                            <textarea style="width:100%" [(ngModel)]="manager.fundManagers"></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Headquarters</td>
-                        <td class="col-md-3">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-1">Telephone</td>
-                        <td class="col-md-3">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-1">Fax</td>
-                        <td class="col-md-3">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="col-md-1">Website</td>
-                        <td class="col-md-3">
+                        <td class="col-md-5">
+                            <textarea style="width:100%" [(ngModel)]="manager.headquarters"></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Contact person</td>
-                        <td class="col-md-3">
+                        <td class="col-md-5">
+                            <textarea style="width:100%" [(ngModel)]="manager.contactPerson"></textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-1">Telephone</td>
+                        <td class="col-md-5">
+                            <input type="text" [(ngModel)]="manager.telephone"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-1">Fax</td>
+                        <td class="col-md-5">
+                            <input type="text" [(ngModel)]="manager.fax"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-1">Website</td>
+                        <td class="col-md-5">
+                            <input type="text" [(ngModel)]="manager.website"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="col-md-1">Email</td>
-                        <td class="col-md-3">
+                        <td class="col-md-5">
+                            <input type="text" [(ngModel)]="manager.email"/>
                         </td>
                     </tr>
                 </table>
                 <div class=" col-md-3">&nbsp;</div>
+                <div class="col-md-1 pull-right">
+                    <button class="btn btn-success" (click)="save()">SAVE</button>
+                </div>
             </div>
 
             <div class="row">
@@ -142,9 +154,13 @@
                     <h3>Funds</h3>
                 </div>
                 <div class="col-md-1 pull-right">
-                    <button class="btn btn-primary">ADD</button>
+                    <button class="btn btn-primary" [disabled]="manager.id == 0 || manager.id == null"
+                            (click)="createFund()">ADD</button>
                 </div>
-                <table class="table-striped">
+                <div class="row col-md-12" *ngIf="manager?.funds == null || manager?.funds?.length == 0">
+                    No funds.
+                </div>
+                <table class="table table-striped" *ngIf="manager?.funds?.length > 0">
                     <thead>
                         <th>&nbsp;</th>
                         <th>FUND</th>
@@ -154,71 +170,71 @@
                         <th>ACTIONS</th>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr *ngFor="let fund of manager?.funds">
                             <td width="5%"></td>
-                            <td width="30%"><a> Grosvenor Investment GIP</a></td>
+                            <td width="30%"><a [routerLink]="['/hf/fundProfile/', fund.id]">{{fund.name}}</a></td>
                             <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
-                            <td width="10%">Multi</td>
-                            <td width="10%">Chicago, US</td>
-                            <td width="10%">10/10/2016</td>
+                            <td width="10%">{{fund.strategy}}</td>
+                            <td width="10%">{{fund.location}}</td>
+                            <td width="10%">{{fund.updated}}</td>
                             <td width="5%">
                                 <a><i class="glyphicon glyphicon-search"></i></a>
                                 <a><i class="glyphicon glyphicon-file"></i></a>
                                 <a><i class="glyphicon glyphicon-plus"></i></a>
                             </td>
                         </tr>
-                        <tr>
-                            <td width="5%"></td>
-                            <td width="30%"><a> Grosvenor Investment GIP</a></td>
-                            <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
-                            <td width="10%">Multi</td>
-                            <td width="10%">Chicago, US</td>
-                            <td width="10%">10/10/2016</td>
-                            <td width="5%">
-                                <a><i class="glyphicon glyphicon-search"></i></a>
-                                <a><i class="glyphicon glyphicon-file"></i></a>
-                                <a><i class="glyphicon glyphicon-plus"></i></a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width="5%"></td>
-                            <td width="30%"><a> Grosvenor Investment GIP</a></td>
-                            <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
-                            <td width="10%">Multi</td>
-                            <td width="10%">Chicago, US</td>
-                            <td width="10%">10/10/2016</td>
-                            <td width="5%">
-                                <a><i class="glyphicon glyphicon-search"></i></a>
-                                <a><i class="glyphicon glyphicon-file"></i></a>
-                                <a><i class="glyphicon glyphicon-plus"></i></a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width="5%"></td>
-                            <td width="30%"><a> Grosvenor Investment GIP</a></td>
-                            <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
-                            <td width="10%">Multi</td>
-                            <td width="10%">Chicago, US</td>
-                            <td width="10%">10/10/2016</td>
-                            <td width="5%">
-                                <a><i class="glyphicon glyphicon-search"></i></a>
-                                <a><i class="glyphicon glyphicon-file"></i></a>
-                                <a><i class="glyphicon glyphicon-plus"></i></a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width="5%"></td>
-                            <td width="30%"><a> Grosvenor Investment GIP</a></td>
-                            <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
-                            <td width="10%">Multi</td>
-                            <td width="10%">Chicago, US</td>
-                            <td width="10%">10/10/2016</td>
-                            <td width="5%">
-                                <a><i class="glyphicon glyphicon-search"></i></a>
-                                <a><i class="glyphicon glyphicon-file"></i></a>
-                                <a><i class="glyphicon glyphicon-plus"></i></a>
-                            </td>
-                        </tr>
+                        <!--<tr>-->
+                            <!--<td width="5%"></td>-->
+                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
+                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
+                            <!--<td width="10%">Multi</td>-->
+                            <!--<td width="10%">Chicago, US</td>-->
+                            <!--<td width="10%">10/10/2016</td>-->
+                            <!--<td width="5%">-->
+                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<td width="5%"></td>-->
+                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
+                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
+                            <!--<td width="10%">Multi</td>-->
+                            <!--<td width="10%">Chicago, US</td>-->
+                            <!--<td width="10%">10/10/2016</td>-->
+                            <!--<td width="5%">-->
+                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<td width="5%"></td>-->
+                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
+                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
+                            <!--<td width="10%">Multi</td>-->
+                            <!--<td width="10%">Chicago, US</td>-->
+                            <!--<td width="10%">10/10/2016</td>-->
+                            <!--<td width="5%">-->
+                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                        <!--<tr>-->
+                            <!--<td width="5%"></td>-->
+                            <!--<td width="30%"><a> Grosvenor Investment GIP</a></td>-->
+                            <!--&lt;!&ndash;<td width="10%" th:text="${memoItem.meetingDate}"></td>&ndash;&gt;-->
+                            <!--<td width="10%">Multi</td>-->
+                            <!--<td width="10%">Chicago, US</td>-->
+                            <!--<td width="10%">10/10/2016</td>-->
+                            <!--<td width="5%">-->
+                                <!--<a><i class="glyphicon glyphicon-search"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-file"></i></a>-->
+                                <!--<a><i class="glyphicon glyphicon-plus"></i></a>-->
+                            <!--</td>-->
+                        <!--</tr>-->
                     </tbody>
                 </table>
             </div>
