1) Macro monitor update: Added US macromonitor chart. Modified some functions by adding parameters for drawing same chart with different data. 2) Changed dates in monitoring liquid portfolio, to be consistent with other reports

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
@@ -14,16 +14,46 @@
             <!--</div>-->
         <!--</div>-->
     <!--</div>-->
-    <div class="row">
-        <div class="col-md-12">
-            <div id="table">
+
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a data-toggle="tab" href="#global">Global</a>
+        </li>
+        <li>
+            <a data-toggle="tab" href="#us">US</a>
+        </li>
+    </ul>
+    <div class="tab-content">
+        <div id="global" class="tab-pane fade in active">
+        <br/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="table">
+                    </div>
+                </div>
+            </div>
+        <br/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="line_chart">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <br/>
-    <div class="row">
-        <div class="col-md-12">
-            <div id="line_chart">
+        <div id="us" class="tab-pane fade">
+        <br/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="table_us">
+                    </div>
+                </div>
+            </div>
+        <br/>
+            <div class="row">
+              <div class="col-md-12">
+                  <div id="line_chart_us">
+                  </div>
+              </div>
             </div>
         </div>
     </div>
