1) Trip memo: breadcrumbs fix

--- a/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-edit.component.html
@@ -2,7 +2,7 @@
     <div class="row top-buffer" >
         <div class="col-md-12">
             <ol class="breadcrumb">
-                <li><a [routerLink]="['/bt/list']">Business Trips</a></li>
+                <li><a [routerLink]="['/bt']">Business Trips</a></li>
                 <li class="active">General</li>
             </ol>
         </div>
